--- a/Output/AV04_LOAD_RSING.build_log.htm
+++ b/Output/AV04_LOAD_RSING.build_log.htm
@@ -27,6 +27,12 @@ Project File Date:  11/10/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LOAD_Ripple'
+compiling TIM6.c...
+Warning: C4008W: splitting LDM/STM has no benefit
+..\drive\TIM6.c: 1 warning, 0 errors
+linking...
+Program Size: Code=38816 RO-data=336 RW-data=188 ZI-data=4692  
+FromELF: creating hex file...
 "..\Output\AV04_LOAD_RSING.axf" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
 </pre>
