档位数据修改

--- a/Output/AV04_LOAD_RSING.build_log.htm
+++ b/Output/AV04_LOAD_RSING.build_log.htm
@@ -27,8 +27,12 @@ Project File Date:  04/13/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LOAD_Ripple'
+compiling modbus.c...
+linking...
+Program Size: Code=15968 RO-data=336 RW-data=168 ZI-data=4744  
+FromELF: creating hex file...
 "..\Output\AV04_LOAD_RSING.axf" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
