--- a/Output/AV04_LOAD_RSING.build_log.htm
+++ b/Output/AV04_LOAD_RSING.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/13/2021
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LOAD_Ripple'
-compiling Menu.c...
+compiling modbus.c...
 linking...
-Program Size: Code=20260 RO-data=336 RW-data=164 ZI-data=4652  
+Program Size: Code=20236 RO-data=336 RW-data=164 ZI-data=4652  
 FromELF: creating hex file...
 "..\Output\AV04_LOAD_RSING.axf" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:01
