--- a/Output/AV04_LOAD_RSING.build_log.htm
+++ b/Output/AV04_LOAD_RSING.build_log.htm
@@ -22,13 +22,36 @@ Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 F:\JK1222F103\Project\AV04_LOAD_RSING.uvproj
-Project File Date:  12/11/2021
+Project File Date:  07/21/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LOAD_Ripple'
+compiling main.c...
+compiling stm32f10x_it.c...
+compiling adc.c...
+compiling BEEP.c...
+compiling bsp_SysTick.c...
+compiling AT24C01.c...
+compiling clock.c...
+compiling DAC.c...
+compiling flash.c...
+compiling GPIO.c...
+compiling IIC_24C01.c...
+compiling key.c...
+compiling modbus.c...
+compiling TIM6.c...
+compiling usart.c...
+compiling FAN_PRO.c...
+compiling Menu.c...
+compiling me_scpi.c...
+compiling AD7689.c...
+compiling Slave_Usart.c...
+linking...
+Program Size: Code=33344 RO-data=336 RW-data=172 ZI-data=4780  
+FromELF: creating hex file...
 "..\Output\AV04_LOAD_RSING.axf" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:15
 </pre>
 </body>
 </html>
