--- a/Output/AV04_LOAD_RSING.build_log.htm
+++ b/Output/AV04_LOAD_RSING.build_log.htm
@@ -22,17 +22,71 @@ Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
 F:\JK1222F103\Project\AV04_LOAD_RSING.uvproj
-Project File Date:  08/11/2022
+Project File Date:  08/13/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'E:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LOAD_Ripple'
+compiling core_cm3.c...
+compiling misc.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_bkp.c...
+compiling stm32f10x_can.c...
+compiling stm32f10x_cec.c...
+compiling stm32f10x_crc.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_dbgmcu.c...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_flash.c...
+compiling stm32f10x_fsmc.c...
+compiling stm32f10x_gpio.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_pwr.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_sdio.c...
+compiling stm32f10x_spi.c...
+compiling stm32f10x_tim.c...
+compiling stm32f10x_usart.c...
+compiling stm32f10x_wwdg.c...
 compiling main.c...
+compiling stm32f10x_it.c...
+compiling system_stm32f10x.c...
+compiling adc.c...
+compiling BEEP.c...
+compiling bsp_SysTick.c...
+compiling AT24C01.c...
+compiling clock.c...
+compiling DAC.c...
+compiling flash.c...
+compiling GPIO.c...
+compiling IIC_24C01.c...
+compiling iwdg.c...
+compiling key.c...
+compiling modbus.c...
+compiling TIM6.c...
+compiling usart.c...
+compiling FAN_PRO.c...
+compiling me_scpi.c...
+compiling AD7689.c...
+compiling Slave_Usart.c...
+compiling scpi-def.c...
+compiling error.c...
+compiling expression.c...
+compiling fifo.c...
+compiling ieee488.c...
+compiling lexer.c...
+compiling minimal.c...
+compiling parser.c...
+compiling units.c...
+compiling utils.c...
 linking...
-Program Size: Code=58706 RO-data=4274 RW-data=324 ZI-data=5220  
+Program Size: Code=55028 RO-data=4280 RW-data=324 ZI-data=5220  
 FromELF: creating hex file...
 "..\Output\AV04_LOAD_RSING.axf" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:30
 </pre>
 </body>
 </html>
