--- a/Output/AV04_LOAD_RSING.build_log.htm
+++ b/Output/AV04_LOAD_RSING.build_log.htm
@@ -22,14 +22,18 @@ Dialog DLL:      TARMSTM.DLL V1.67.1.0
  
 <h2>Project:</h2>
 H:\JK1222F103\Project\AV04_LOAD_RSING.uvproj
-Project File Date:  05/25/2023
+Project File Date:  07/10/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 4 (build 422)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LOAD_Ripple'
+compiling main.c...
+linking...
+Program Size: Code=58528 RO-data=3948 RW-data=888 ZI-data=5032  
+FromELF: creating hex file...
 After Build - User command #1: C:\Keil_v5\ARM\ARMCC\bin\fromelf.exe --bin -o ..\update\99XXUP103.bin ..\Output\AV04_LOAD_RSING.axf
 "..\Output\AV04_LOAD_RSING.axf" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
